syntax = "proto3";

package payment.wallet_transactions.v1;

option csharp_namespace = "PaymentService.Grpc.WalletTransactions";

import "google/protobuf/timestamp.proto";

service WalletTransactionsService {
  rpc GetById (GetTransactionByIdRequest) returns (GetTransactionByIdResponse);
  rpc GetByWalletId (GetTransactionsByWalletIdRequest) returns (GetTransactionsByWalletIdResponse);
}

enum TransactionType {
  TRANSACTION_TYPE_UNSPECIFIED = 0;
  TRANSACTION_TYPE_TOPUP = 1;
  TRANSACTION_TYPE_PAYMENT = 2;
  TRANSACTION_TYPE_REFUND = 3;
}

message WalletTransaction {
  int64 transaction_id = 1;
  int64 wallet_id = 2;
  TransactionType type = 3;
  int64 amount = 4;
  int64 payment_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

message GetTransactionByIdRequest {
  int64 transaction_id = 1;
}

message GetTransactionByIdResponse {
  WalletTransaction transaction = 1;
}

message GetTransactionsByWalletIdRequest {
  int64 wallet_id = 1;
  int64 cursor = 2;
}

message GetTransactionsByWalletIdResponse {
  repeated WalletTransaction transaction = 1;
}